# autobots

./: .env.sample  .env.sample.datadog  .env.sample.flower  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  docker-compose.override.yml  docker-compose.yml  dockerfile  dockerfile.local  pyproject.toml  worker.dockerfile
.github/workflows/: CICD.yaml  build.yaml  checkmarx.yml  ci.yaml  deployment-dev.yaml  deployment-prod.yaml  integration.yaml  tests.yaml
autobots/: __init__.py  main.py  worker.py
autobots/action/: IActionGenImage.py  IActionGenText.py  IActionVectorSearch.py  action.py  action_crud.py  action_doc_model.py  action_factory.py  action_gen_image_dalle_openai.py  action_gen_image_dalle_openai_v2.py  action_gen_image_stability_ai.py  action_gen_image_stability_ai_v2.py  action_gen_text_llm_chat_openai.py  action_gen_text_llm_chat_openai_v2.py  action_gen_text_llm_chat_with_vector_search_openai.py  action_manager.py  action_types.py  llm_chat.py  read_urls.py  stability_chat.py  user_actions.py  user_actions_market.py
autobots/action_graph/: action_graph.py  action_graph_crud.py  user_action_graph.py
autobots/action_market/: action_market_crud.py  action_market_doc_model.py  user_action_market.py
autobots/action_result/: action_result_crud.py  action_result_doc_model.py  user_action_result.py
autobots/action_run_log/: action_run_log_crud.py  action_run_log_doc_model.py  user_action_run_log.py
autobots/agent/: one_step.py  reason_act_observe.py
autobots/api/: deps.py
autobots/auth/: auth.py  security.py
autobots/chat/: chat_crud.py  chat_doc_model.py  user_chat.py
autobots/conn/: conn.py
autobots/core/: config.py  fastapi_desc.py  lifespan.py  log.py  resource.py  settings.py  utils.py
autobots/data/: data.py
autobots/database/: base.py  database_models.py  datastore_meta_crud.py  graph_orm_model.py  graphs_crud.py  mongo_base.py  prompt_crud.py  prompt_orm_model.py  user_crud.py  user_orm_model.py
autobots/datastore/: data_provider.py  datastore.py  datastore_factory.py  datastore_meta_crud.py  datastore_meta_orm_model.py  user_datastore.py
autobots/event_result/: event_result_crud.py  event_result_model.py
autobots/graphs/: action_graph.py  action_graph_crud.py  action_graph_doc_model.py  graph.py  graph_orm_model.py  graphs_crud.py  user_action_graph.py  user_graphs.py
autobots/integration-engineer/: README.md
autobots/llm/: llm.py
autobots/prompt/: prompt.py
autobots/prompts/: prompt_crud.py  prompt_factory.py  prompt_orm_model.py  target_platform.py  user_prompts.py
autobots/subscription/: api_usage.py  api_usage_dispatch.py
autobots/user/: user_crud.py  user_datastore.py  user_graphs.py  user_orm_model.py  user_prompts.py
docs/: Action run lifecycle.md  Action.md  Action_Graph.md  Code_structure.md  Datadog.md  Docker.md  Release_Tag.md  lint_copy.md  test.md
learn/async_generators/: README.md  async_generators.py
scripts/: flower-start.sh  init-pre-commit.sh  worker-start.sh
scripts/dev/: remove_containers.sh  run_containers.sh
src/autobots/: __init__.py  main.py
tests/: __init__.py  conftest.py
tests/action/: test_action_audio2text.py  test_action_audio2text_transcription_assemblyai.py  test_action_audio2text_transcription_openai.py  test_action_audio2text_translation_openai.py  test_action_crud.py  test_action_factory.py  test_action_img2img_photoshoot_claid.py  test_action_linkedin.py  test_action_multimodal_assistant_openai.py  test_action_multimodal_llm_chat_claude.py  test_action_read_api_file.py  test_action_text2audio_speech_openai.py  test_action_text2text_api.py  test_action_text2text_linkedin.py  test_action_text2text_llm_chat_claude.py  test_action_text2text_llm_chat_openai.py  test_action_text2text_llm_chat_serp_openai.py  test_action_text2text_llm_chat_with_vector_search_openai.py  test_action_text2text_user_input.py  test_action_type_text2audio.py  test_action_video2video_opus.py  test_llm_chat.py  test_multimodal_llm_chat_with_vector_search_openai.py  test_read_urls.py  test_run_action_in_background.py  test_stability_chat.py
tests/agent/: reason_act_observe.py  test_reason_act_observe.py
tests/data/: test_data.py
tests/data_model/: test_data_model_updated_at.py
tests/database/: __init__.py  test_database_models.py  test_datastore_meta.py  test_mongo_base.py  test_prompt_crud.py  test_user_crud.py
tests/datastore/: chroma.py  multi_vector.py  test_data_provider.py  test_datastore.py  test_datastore_factory.py  test_multimodal_rag.py  test_semantic_data_provider.py
tests/files/: test_files.py
tests/graphs/: test_graphs_crud.py  test_user_action_graph.py  test_user_graphs.py
tests/information/: test_information_updated_at.py
(+603 files in other folders)
