[tool.poetry]
name = "autobots"
version = "0.1.0"
description = ""
authors = ["Anurag Jha <toanuragjha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "0.110.0"
uvicorn = "0.28.0"
pydantic = {extras = ["dotenv", "email"], version = "2.6.4"}
pydantic-settings = "2.2.1"
loguru = "0.7.2"
openai = {extras = ["datalib"], version = "1.14.0"}
selenium = "4.18.1"
#stability-sdk = "^0.8.3"
aiohttp = "3.9.3"
duckduckgo-search = "5.2.2"
pinecone-client = {extras = ["grpc"], version = "3.1.0"}
boto3 = "1.34.84"
boto3-stubs = {extras = ["essential"], version = "1.34.62"}
tiktoken = "0.6.0"
pillow = "10.3.0"
ddtrace = "2.7.2"
sqlalchemy = "2.0.28"
psycopg2 = "2.9.9"
supabase = "2.4.0"
python-jose = "3.3.0"
python-multipart = "0.0.9"
redis = "5.0.3"
aiodns = "3.1.1"
jinja2 = "3.1.3"
networkx = "3.2.1"
unstructured-client = "0.22.0"
webdriver-manager = "4.0.1"
psutil = "5.9.8"
retry = "0.9.2"
replicate = "0.24.0"
discord = "2.3.2"
requests = "2.31.0"
apscheduler = "3.10.4"
werkzeug = "3.0.2"
motor = "3.4.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "0.23.5"
pytest-xdist = "3.5.0"
pytest-timeout = "2.2.0"
ruff = "0.2.2"
pre-commit = "3.6.2"
pg8000 = "1.30.5"

[tool.ruff]
fix = true
line-length = 88  # defaults to 88
lint.ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
