[tool.poetry]
name = "autobots"
version = "0.1.0"
description = ""
authors = ["Anurag Jha <toanuragjha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "0.111.0"
uvicorn = "0.29.0"
pydantic = {extras = ["dotenv", "email"], version = "2.7.1"}
pydantic-settings = "2.2.1"
loguru = "0.7.2"
openai = {extras = ["datalib"], version = "1.29.0"}
selenium = "4.20.0"
#stability-sdk = "^0.8.3"
aiohttp = "3.9.5"
duckduckgo-search = "5.3.0b4"
pinecone-client = {extras = ["grpc"], version = "4.0.0"}
boto3 = "1.34.104"
boto3-stubs = {extras = ["essential"], version = "1.34.104"}
tiktoken = "0.7.0"
pillow = "10.3.0"
ddtrace = "2.8.4"
sqlalchemy = "2.0.30"

supabase = "2.4.5"
python-jose = "3.3.0"
python-multipart = "0.0.9"
redis = "5.0.4"
aiodns = "3.2.0"
jinja2 = "3.1.4"
networkx = "3.3"
unstructured-client = "0.22.0"
webdriver-manager = "4.0.1"
psutil = "5.9.8"
retry = "0.9.2"
replicate = "0.25.2"
discord = "2.3.2"
requests = "2.32.0"
apscheduler = "3.10.4"
werkzeug = "3.0.3"
motor = "3.4.0"
langjam = "0.1.7"
google-search-results = "2.4.2"
celery = "5.4.0"
asgiref = "3.8.1"
pendulum = "^3.0.0"
pydantic-extra-types = "^2.8.2"
anthropic = "0.29.0"
[tool.poetry.group.dev.dependencies]
pytest-asyncio = "0.23.5"
pytest-xdist = "3.5.0"
pytest-timeout = "2.2.0"
ruff = "0.4.4"
pre-commit = "3.6.2"
pg8000 = "1.30.5"

[tool.ruff]
fix = true
line-length = 88  # defaults to 88
lint.ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
