[tool.poetry]
name = "autobots"
version = "0.1.0"
description = ""
authors = ["Anurag Jha <toanuragjha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "0.111.0"
uvicorn = "0.30.1"
pydantic = {extras = ["dotenv", "email"], version = "2.8.2"}
pydantic-settings = "2.3.4"
loguru = "0.7.2"
openai = {extras = ["datalib"], version = "1.35.10"}
selenium = "4.22.0"
#stability-sdk = "^0.8.3"
aiohttp = "3.9.5"
duckduckgo-search = "6.1.9"
pinecone-client = {extras = ["grpc"], version = "4.1.2"}
boto3 = "1.34.140"
boto3-stubs = {extras = ["essential"], version = "1.34.140"}
tiktoken = "0.7.0"
pillow = "10.4.0"
ddtrace = "2.9.2"
sqlalchemy = "2.0.31"
psycopg2 = "2.9.9"
supabase = "2.5.1"
python-jose = "3.3.0"
python-multipart = "0.0.9"
redis = "5.0.7"
aiodns = "3.2.0"
jinja2 = "3.1.4"
networkx = "3.3"
unstructured-client = "0.22.0"
google-ads="24.1.0"
assemblyai = "0.29.0"
linkedin-scraper="2.11.2"
chromadb="0.5.3"
webdriver-manager = "4.0.1"
psutil = "6.0.0"
retry = "0.9.2"
replicate = "0.28.0"
discord = "2.3.2"
requests = "2.32.3"
apscheduler = "3.10.4"
werkzeug = "3.0.3"
motor = "3.5.0"
langjam = "0.1.7"
google-search-results = "2.4.2"
celery = "5.4.0"
asgiref = "3.8.1"
pendulum = "^3.0.0"
pydantic-extra-types = "2.9.0"
anthropic = "0.30.1"
pyyaml = "6.0.1"
chromadb = "^0.5.3"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "0.23.5"
pytest-xdist = "3.6.1"
pytest-timeout = "2.2.0"
ruff = "0.4.4"
pre-commit = "3.6.2"
pg8000 = "1.30.5"

[tool.ruff]
fix = true
line-length = 88  # defaults to 88
lint.ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
